trabalho-4/DND/DNDParser.py
# Generated from DND.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class DNDParser ( Parser ):

    grammarFileName = "DND.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'decl:'", "'='", "';'", "'def'", "'{'", 
                     "'}'", "','", "'LEVEL'", "'NAME'", "'SCHOOL'", "'DESCR'", 
                     "'DAMAGE'", "'CAST'", "'DMG_TYPE'", "'COMP'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':'", "'V'", 
                     "'S'", "'M'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM_INT", "STRING", "COMMENT", "WS", "SEP", "V", 
                      "S", "M", "CAST_TIME", "SCHOOL", "DECL_TYPE", "DICE", 
                      "IDENT" ]

    RULE_program = 0
    RULE_declaracao = 1
    RULE_decl = 2
    RULE_spell = 3
    RULE_tags = 4
    RULE_level_tag = 5
    RULE_name_tag = 6
    RULE_school_tag = 7
    RULE_descr_tag = 8
    RULE_opt_tags = 9
    RULE_damage_tag = 10
    RULE_cast_tag = 11
    RULE_damage_type_tag = 12
    RULE_comp_tag = 13
    RULE_comp1 = 14
    RULE_comp2 = 15
    RULE_comp3 = 16

    ruleNames =  [ "program", "declaracao", "decl", "spell", "tags", "level_tag", 
                   "name_tag", "school_tag", "descr_tag", "opt_tags", "damage_tag", 
                   "cast_tag", "damage_type_tag", "comp_tag", "comp1", "comp2", 
                   "comp3" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    NUM_INT=16
    STRING=17
    COMMENT=18
    WS=19
    SEP=20
    V=21
    S=22
    M=23
    CAST_TIME=24
    SCHOOL=25
    DECL_TYPE=26
    DICE=27
    IDENT=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(DNDParser.DeclaracaoContext,0)


        def spell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DNDParser.SpellContext)
            else:
                return self.getTypedRuleContext(DNDParser.SpellContext,i)


        def getRuleIndex(self):
            return DNDParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DNDParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DNDParser.T__0:
                self.state = 34
                self.declaracao()


            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DNDParser.T__3:
                self.state = 37
                self.spell()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclaracaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DNDParser.DeclContext)
            else:
                return self.getTypedRuleContext(DNDParser.DeclContext,i)


        def getRuleIndex(self):
            return DNDParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = DNDParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(DNDParser.T__0)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DNDParser.DECL_TYPE or _la==DNDParser.IDENT:
                self.state = 44
                self.decl()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL_TYPE(self):
            return self.getToken(DNDParser.DECL_TYPE, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(DNDParser.IDENT)
            else:
                return self.getToken(DNDParser.IDENT, i)

        def STRING(self):
            return self.getToken(DNDParser.STRING, 0)

        def NUM_INT(self):
            return self.getToken(DNDParser.NUM_INT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = DNDParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DNDParser.DECL_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(DNDParser.DECL_TYPE)
                self.state = 51
                self.match(DNDParser.IDENT)
                self.state = 52
                self.match(DNDParser.T__1)
                self.state = 53
                _la = self._input.LA(1)
                if not(_la==DNDParser.NUM_INT or _la==DNDParser.STRING):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 54
                self.match(DNDParser.T__2)
                pass
            elif token in [DNDParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(DNDParser.IDENT)
                self.state = 56
                self.match(DNDParser.T__1)
                self.state = 57
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DNDParser.NUM_INT) | (1 << DNDParser.STRING) | (1 << DNDParser.IDENT))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 58
                self.match(DNDParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SpellContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def tags(self):
            return self.getTypedRuleContext(DNDParser.TagsContext,0)


        def getRuleIndex(self):
            return DNDParser.RULE_spell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpell" ):
                listener.enterSpell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpell" ):
                listener.exitSpell(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpell" ):
                return visitor.visitSpell(self)
            else:
                return visitor.visitChildren(self)




    def spell(self):

        localctx = DNDParser.SpellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_spell)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(DNDParser.T__3)
            self.state = 62
            self.match(DNDParser.IDENT)
            self.state = 63
            self.match(DNDParser.T__4)
            self.state = 64
            self.tags()
            self.state = 65
            self.match(DNDParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TagsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name_tag(self):
            return self.getTypedRuleContext(DNDParser.Name_tagContext,0)


        def descr_tag(self):
            return self.getTypedRuleContext(DNDParser.Descr_tagContext,0)


        def level_tag(self):
            return self.getTypedRuleContext(DNDParser.Level_tagContext,0)


        def school_tag(self):
            return self.getTypedRuleContext(DNDParser.School_tagContext,0)


        def opt_tags(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DNDParser.Opt_tagsContext)
            else:
                return self.getTypedRuleContext(DNDParser.Opt_tagsContext,i)


        def getRuleIndex(self):
            return DNDParser.RULE_tags

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTags" ):
                listener.enterTags(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTags" ):
                listener.exitTags(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTags" ):
                return visitor.visitTags(self)
            else:
                return visitor.visitChildren(self)




    def tags(self):

        localctx = DNDParser.TagsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tags)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.name_tag()
            self.state = 68
            self.match(DNDParser.T__6)
            self.state = 69
            self.descr_tag()
            self.state = 70
            self.match(DNDParser.T__6)
            self.state = 71
            self.level_tag()
            self.state = 72
            self.match(DNDParser.T__6)
            self.state = 73
            self.school_tag()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DNDParser.T__6:
                self.state = 74
                self.match(DNDParser.T__6)
                self.state = 75
                self.opt_tags()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Level_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def NUM_INT(self):
            return self.getToken(DNDParser.NUM_INT, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_level_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLevel_tag" ):
                listener.enterLevel_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLevel_tag" ):
                listener.exitLevel_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLevel_tag" ):
                return visitor.visitLevel_tag(self)
            else:
                return visitor.visitChildren(self)




    def level_tag(self):

        localctx = DNDParser.Level_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_level_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(DNDParser.T__7)
            self.state = 82
            self.match(DNDParser.SEP)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==DNDParser.NUM_INT or _la==DNDParser.IDENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Name_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def STRING(self):
            return self.getToken(DNDParser.STRING, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_name_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName_tag" ):
                listener.enterName_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName_tag" ):
                listener.exitName_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName_tag" ):
                return visitor.visitName_tag(self)
            else:
                return visitor.visitChildren(self)




    def name_tag(self):

        localctx = DNDParser.Name_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(DNDParser.T__8)
            self.state = 86
            self.match(DNDParser.SEP)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==DNDParser.STRING or _la==DNDParser.IDENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class School_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def SCHOOL(self):
            return self.getToken(DNDParser.SCHOOL, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_school_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchool_tag" ):
                listener.enterSchool_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchool_tag" ):
                listener.exitSchool_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSchool_tag" ):
                return visitor.visitSchool_tag(self)
            else:
                return visitor.visitChildren(self)




    def school_tag(self):

        localctx = DNDParser.School_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_school_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(DNDParser.T__9)
            self.state = 90
            self.match(DNDParser.SEP)
            self.state = 91
            _la = self._input.LA(1)
            if not(_la==DNDParser.SCHOOL or _la==DNDParser.IDENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Descr_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def STRING(self):
            return self.getToken(DNDParser.STRING, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_descr_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescr_tag" ):
                listener.enterDescr_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescr_tag" ):
                listener.exitDescr_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescr_tag" ):
                return visitor.visitDescr_tag(self)
            else:
                return visitor.visitChildren(self)




    def descr_tag(self):

        localctx = DNDParser.Descr_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_descr_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(DNDParser.T__10)
            self.state = 94
            self.match(DNDParser.SEP)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==DNDParser.STRING or _la==DNDParser.IDENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Opt_tagsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def damage_tag(self):
            return self.getTypedRuleContext(DNDParser.Damage_tagContext,0)


        def cast_tag(self):
            return self.getTypedRuleContext(DNDParser.Cast_tagContext,0)


        def damage_type_tag(self):
            return self.getTypedRuleContext(DNDParser.Damage_type_tagContext,0)


        def comp_tag(self):
            return self.getTypedRuleContext(DNDParser.Comp_tagContext,0)


        def getRuleIndex(self):
            return DNDParser.RULE_opt_tags

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpt_tags" ):
                listener.enterOpt_tags(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpt_tags" ):
                listener.exitOpt_tags(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpt_tags" ):
                return visitor.visitOpt_tags(self)
            else:
                return visitor.visitChildren(self)




    def opt_tags(self):

        localctx = DNDParser.Opt_tagsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_opt_tags)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DNDParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.damage_tag()
                pass
            elif token in [DNDParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.cast_tag()
                pass
            elif token in [DNDParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.damage_type_tag()
                pass
            elif token in [DNDParser.T__14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.comp_tag()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Damage_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def NUM_INT(self):
            return self.getToken(DNDParser.NUM_INT, 0)

        def DICE(self):
            return self.getToken(DNDParser.DICE, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_damage_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDamage_tag" ):
                listener.enterDamage_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDamage_tag" ):
                listener.exitDamage_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDamage_tag" ):
                return visitor.visitDamage_tag(self)
            else:
                return visitor.visitChildren(self)




    def damage_tag(self):

        localctx = DNDParser.Damage_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_damage_tag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(DNDParser.T__11)
            self.state = 104
            self.match(DNDParser.SEP)
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DNDParser.NUM_INT]:
                self.state = 105
                self.match(DNDParser.NUM_INT)
                self.state = 106
                self.match(DNDParser.DICE)
                pass
            elif token in [DNDParser.IDENT]:
                self.state = 107
                self.match(DNDParser.IDENT)
                self.state = 108
                self.match(DNDParser.DICE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cast_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def CAST_TIME(self):
            return self.getToken(DNDParser.CAST_TIME, 0)

        def NUM_INT(self):
            return self.getToken(DNDParser.NUM_INT, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_cast_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCast_tag" ):
                listener.enterCast_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCast_tag" ):
                listener.exitCast_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCast_tag" ):
                return visitor.visitCast_tag(self)
            else:
                return visitor.visitChildren(self)




    def cast_tag(self):

        localctx = DNDParser.Cast_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cast_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(DNDParser.T__12)
            self.state = 112
            self.match(DNDParser.SEP)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==DNDParser.NUM_INT or _la==DNDParser.IDENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 114
            self.match(DNDParser.CAST_TIME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Damage_type_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def STRING(self):
            return self.getToken(DNDParser.STRING, 0)

        def IDENT(self):
            return self.getToken(DNDParser.IDENT, 0)

        def getRuleIndex(self):
            return DNDParser.RULE_damage_type_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDamage_type_tag" ):
                listener.enterDamage_type_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDamage_type_tag" ):
                listener.exitDamage_type_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDamage_type_tag" ):
                return visitor.visitDamage_type_tag(self)
            else:
                return visitor.visitChildren(self)




    def damage_type_tag(self):

        localctx = DNDParser.Damage_type_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_damage_type_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(DNDParser.T__13)
            self.state = 117
            self.match(DNDParser.SEP)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==DNDParser.STRING or _la==DNDParser.IDENT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comp_tagContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEP(self):
            return self.getToken(DNDParser.SEP, 0)

        def comp1(self):
            return self.getTypedRuleContext(DNDParser.Comp1Context,0)


        def getRuleIndex(self):
            return DNDParser.RULE_comp_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_tag" ):
                listener.enterComp_tag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_tag" ):
                listener.exitComp_tag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp_tag" ):
                return visitor.visitComp_tag(self)
            else:
                return visitor.visitChildren(self)




    def comp_tag(self):

        localctx = DNDParser.Comp_tagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comp_tag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(DNDParser.T__14)
            self.state = 121
            self.match(DNDParser.SEP)
            self.state = 122
            self.comp1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def V(self):
            return self.getToken(DNDParser.V, 0)

        def comp2(self):
            return self.getTypedRuleContext(DNDParser.Comp2Context,0)


        def getRuleIndex(self):
            return DNDParser.RULE_comp1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp1" ):
                listener.enterComp1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp1" ):
                listener.exitComp1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp1" ):
                return visitor.visitComp1(self)
            else:
                return visitor.visitChildren(self)




    def comp1(self):

        localctx = DNDParser.Comp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_comp1)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(DNDParser.V)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(DNDParser.V)
                self.state = 126
                self.comp2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.comp2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def S(self):
            return self.getToken(DNDParser.S, 0)

        def comp3(self):
            return self.getTypedRuleContext(DNDParser.Comp3Context,0)


        def getRuleIndex(self):
            return DNDParser.RULE_comp2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp2" ):
                listener.enterComp2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp2" ):
                listener.exitComp2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp2" ):
                return visitor.visitComp2(self)
            else:
                return visitor.visitChildren(self)



